--- a/static/css/temba-components.css
+++ b/static/css/temba-components.css
@@ -4,7 +4,6 @@ html input {
 
 html {
 
-  
   --font-family: 'Roboto', Helvetica, Arial, sans-serif;
   --primary-rgb: 35, 135, 202;
   --secondary-rgb: 140, 51, 140;
@@ -66,6 +65,8 @@ html {
   --color-link-secondary-hover: rgba(var(--secondary-rgb), 0.9);
   --color-button-primary: var(--color-primary-dark);
   --color-button-primary-text: var(--color-text-light);
+  --color-button-light: rgb(246, 248, 250);
+  --color-button-light-text: rgb(36, 41, 47);
   --color-button-secondary: var(--color-secondary-light);
   --color-button-secondary-text: var(--color-text-dark);
 
@@ -83,8 +84,12 @@ html {
   --color-nav-selected-bg: #fff;
   --color-nav-selected-text: var(--color-primary-dark);
 
-  --color-info: #c0d9eb;
-  --color-warning: #fff6c0;
+  --color-info: rgb(238, 246, 255);
+  --color-info-border: rgb(74, 163, 223);
+
+  --color-warning: rgb(255, 253, 218);
+  --color-warning-border: rgb(251, 246, 176);
+
   --color-error: rgb(var(--error-rgb));
   --font-size: 14px;
   --button-font-size: 1.125rem;
@@ -121,7 +126,42 @@ html {
   --button-x: 14px;
 
   --control-margin-bottom: 15px;
+
+  --menu-padding: 1em;
+  --bounce: cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
+
+temba-button {
+  --button-bg: var(--color-primary-dark);
+  --button-text: var(--color-text-light);
+  --button-border: none;
+  --button-shadow: var(--widget-box-shadow);
+}
+
+temba-button:hover {
+  --button-bg-img: linear-gradient(to bottom, rgba(var(--primary-rgb),.1), transparent, transparent);
+}
+
+temba-button.active {
+  --button-bg-img: linear-gradient(to bottom, transparent, rgba(0,0,0,.05));
+}
+
+temba-button.light {
+  --button-bg: #fff;
+  --button-text: #999;
+  --button-border: none;
+  --button-shadow: var(--widget-box-shadow);
+
+}
+
+temba-button.light:hover {
+  --button-bg-img: linear-gradient(to bottom, transparent, rgba(0,0,0,.001));
+}
+
+temba-button.light.active {
+  --button-bg-img: linear-gradient(to bottom, transparent, rgba(0,0,0,.02));
+}
+
 
 temba-select:focus {
   outline: none;
