--- a/templates/smartmin/base.html
+++ b/templates/smartmin/base.html
@@ -11,12 +11,11 @@
 <script type="text/javascript" src="{{ STATIC_URL }}js/libs/jquery.url.js"></script>
 
 <script>
+
   $("td.clickable").hover(function(){
     this.style.cursor='pointer'
   },
   function(){});
-
-
 
   $("td.clickable").click(function(){
     document.location = $(this).children("a").attr("href");
@@ -24,6 +23,21 @@
 
 
   function fetchPJAXContent(url, container, options) {
+
+    options = options || {};
+
+    // hijack an pjax requests made from spa pages and route the content there instead
+    if (container == "#pjax" && document.querySelector(".spa-content")) {
+      container = ".spa-content";
+      options["headers"] = (options["headers"] || {})
+      options["headers"]["TEMBA-SPA"] = 1;
+    }
+
+    var triggerEvents = true;
+    if (!!options["ignoreEvents"]) {
+      triggerEvents = false;
+    }
+
     var type = 'GET';
     var data = undefined;
     var processData = true;
@@ -36,10 +50,10 @@
       }
       
       if('formData' in options) {
-         type = 'POST';
-         processData = false;
-         data = options['formData'];
-         contentType = false;
+        type = 'POST';
+        processData = false;
+        data = options['formData'];
+        contentType = false;
       }
     }
 
@@ -50,7 +64,9 @@
       }
     }
 
-    document.dispatchEvent(new Event("temba-pjax-begin"));
+    if (triggerEvents) {
+      document.dispatchEvent(new Event("temba-pjax-begin"));
+    }
 
     // see if we should skip our fetch
     if (options) {
@@ -75,7 +91,6 @@
           toastr.info(toast, '', {"positionClass": "toast-bottom-full-width"});
         }
 
-
         if ('followRedirects' in options && options['followRedirects'] == true) {
             var redirect = jqXHR.getResponseHeader('REDIRECT');
             if (redirect) {
@@ -96,7 +111,10 @@
         }
 
         $(container).html(response);
-        document.dispatchEvent(new Event("temba-pjax-complete"));
+
+        if (triggerEvents) {
+          document.dispatchEvent(new Event("temba-pjax-complete"));
+        }
 
         if (options) {
           if ('onSuccess' in options) {
@@ -143,10 +161,18 @@ function refresh(onSuccess, forceReload){
         if (forceReload) {
           return false;
         }
-        return eval(document.querySelector("#pjax").dataset.noPjax);
+        var pjax = document.querySelector("#pjax");
+        if (pjax) {
+          return eval(document.querySelector("#pjax").dataset.noPjax);
+        }
+        console.log("forcing ignore refresh");
+        return true;
       },
       onIgnore: function() {
-        scheduleRefresh();
+        var pjax = document.querySelector("#pjax");
+        if (pjax) {
+          scheduleRefresh();
+        }
       }
   });
 }
