--- a/templates/triggers/trigger_catchall.haml
+++ b/templates/triggers/trigger_catchall.haml
@@ -10,3 +10,25 @@
     -trans "Flow Parameters"
   #embedded-data-catchall.hidden
     #embed-container-catchall
+
+  %temba-dialog#confirm-catchall-trigger.hide(header='{{ _("Trigger Confirmation")|escapejs }}' primaryButtonName='{{ _("Confirm")|escapejs }}' destructive='true')
+    .p-6
+
+
+-block extra-script
+  :javascript
+    function onCatchAllSuccess(form, htmlString, status, jqXHR) {
+      const requiredFields = ['div.field_keyword', 'div.field_flow']
+      handleSubmissionResponse(requiredFields, form, { htmlString, status, jqXHR });
+    }
+
+    document.addEventListener("DOMContentLoaded", function() {
+      const options = {
+        formContainerId: '#id-trigger-catchall',
+        confirmationBoxId: '#confirm-catchall-trigger',
+        flowFieldId: '#id_catchall_flow',
+        postUrl: '/trigger/catchall/',
+        successFunc: onCatchAllSuccess
+      };
+      initForm(options);
+    });
