Fixed QA issues with analytics dashboard.

--- a/templates/reports/report_analytics.haml
+++ b/templates/reports/report_analytics.haml
@@ -12,6 +12,10 @@
       display: none;
     }
 
+    .rotated-signal {
+      padding-right: 5px;
+    }
+
 - block extra-script
   = block.super
   - for script in scripts
