--- a/templates/tickets/ticketer_read.haml
+++ b/templates/tickets/ticketer_read.haml
@@ -2,7 +2,7 @@
 -load smartmin i18n
 
 -block pjax
-  -blocktrans trimmed with type_name=object.get_type.name name=object.name
+  -blocktrans trimmed with type_name=object.type.name name=object.name
     {{ type_name }} ticketing service over <b>{{ name }}</b>. Contacts who have open tickets with this service will have their
     messages forwarded to the service, and replies made using the service will be sent back to the contact.
 
@@ -17,5 +17,5 @@
 
 
 -block summary
-  -blocktrans trimmed with type_name=object.get_type.name name=object.name
+  -blocktrans trimmed with type_name=object.type.name name=object.name
     {{ type_name }} ticketing service over <b>{{ name }}</b>.
